# dummy_dino

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
dummy_dino/: dataset.py  dino.py
dummy_dino/core/: __init__.py  dataset.py  dino.py
tests/: conftest.py  test_dataset.py  test_dino.py
tests/core/: test_dataset.py  test_dino.py
