[project]
name = "dummy-dino"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "dummy_dino", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
